@@ -2,6 +2,8 @@ Version 1.11.5+dev:
  * Add-ons client:
    * The Description popup displays the selected add-on's dependencies now,
      using color-keyed statuses.
+   * Circular dependencies are no longer treated as erroneous in terminal
+     output.
  * Language and i18n:
    * Updated translations:
  * Miscellaneous and bug fixes
